ProjectService isStatusTransitionValid and isStatusTransitionValid tests done